[gd_scene load_steps=9 format=3 uid="uid://c84q1bhurmaje"]

[ext_resource type="Script" uid="uid://cljqm2w22tv47" path="res://DialogueSystem/scripts/dialogue_node_scene.gd" id="1_hptkn"]
[ext_resource type="Texture2D" uid="uid://e5xgwcg17m8y" path="res://DialogueSystem/ui/NodeEmpty.png" id="2_txslj"]
[ext_resource type="Texture2D" uid="uid://p3n83iyfep58" path="res://DialogueSystem/ui/NodeBlue.png" id="3_o47rx"]
[ext_resource type="Texture2D" uid="uid://bjpbq4g8mb34l" path="res://DialogueSystem/ui/NodeRed.png" id="4_olwk1"]
[ext_resource type="Texture2D" uid="uid://cook7ex8wmcpb" path="res://DialogueSystem/ui/NodeGreen.png" id="5_if6m3"]
[ext_resource type="FontFile" uid="uid://c3y787qm8icnd" path="res://DialogueSystem/Fonts/cour.ttf" id="5_nogvb"]

[sub_resource type="LabelSettings" id="LabelSettings_mb4fu"]
outline_color = Color(0.607843, 0.607843, 0.607843, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_w41vf"]
default_font = ExtResource("5_nogvb")
default_font_size = 15

[node name="DialogueNode" type="Node2D"]
script = ExtResource("1_hptkn")
possibleImages = Array[NodePath]([NodePath("NodeEmpty"), NodePath("NodeBlue"), NodePath("NodeGreen"), NodePath("NodeRed")])

[node name="NodeEmpty" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.215686)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_txslj")

[node name="NodeBlue" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_o47rx")

[node name="NodeRed" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_olwk1")

[node name="NodeGreen" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_if6m3")

[node name="txt_NodeName" type="Label" parent="."]
offset_left = 50.0
offset_right = 282.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_mb4fu")
uppercase = true

[node name="txt_Coord" type="Label" parent="."]
offset_right = 50.0
offset_bottom = 23.0
text = "(70,5)"
label_settings = SubResource("LabelSettings_mb4fu")
uppercase = true

[node name="Txt_Main" type="Label" parent="."]
offset_left = 5.0
offset_top = 32.0
offset_right = 316.0
offset_bottom = 162.0
theme = SubResource("Theme_w41vf")
autowrap_mode = 2

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = 237.0
offset_top = -3.0
offset_right = 320.0
offset_bottom = 28.0
item_count = 3
popup/item_0/text = "Edit"
popup/item_1/text = "Delete"
popup/item_1/id = 1
popup/item_2/text = "Swap"
popup/item_2/id = 2

[connection signal="mouse_entered" from="NodeEmpty" to="." method="_on_node_empty_mouse_entered"]
[connection signal="mouse_exited" from="NodeEmpty" to="." method="_on_node_empty_mouse_exited"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
